# Libris

./: .env.example  .gitignore  README.md  docker-compose.yml  setup_env.sh
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  main.py  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 05b5d70695a0_add_refresh_tokens_table.py  417c9f309167_add_books_reviews_bookmarks.py  51ee5fbe6b5a_update_reviews_check_constraints.py  698a59982dff_init_users.py  6f9de4a2e86d_add_updated_at_to_bookmarks.py  a360791d2e93_add_fields_to_user.py  f2530360a1df_add_likes_field.py
backend/src/: main.py
backend/src/core/: config.py  database.py  deps.py  security.py
backend/src/modules/auth/: deps.py  models.py  routers.py  schemas.py  services.py
backend/src/modules/bookmarks/: models.py  routers.py  schemas.py  services.py
backend/src/modules/books/: models.py  routers.py  schemas.py  services.py
backend/src/modules/reviews/: models.py  routers.py  schemas.py  services.py
backend/src/modules/users/: models.py  routers.py  schemas.py  services.py
frontend/: .env.example  Dockerfile  package.json
